[sc-4878] Replace material modals by pastanaga ones (#670)
* Replace MatDialog by Pastanaga modals in upload module

* Replace MatDialog by Pastanaga modals in account module

* Fix unit tests

* Fix strict compilation (contributor)

* Fix dropdown button chevron + fix token dialog initialisation

* Update Pastanaga

* Update angular to latest patch version

* Fix dashboard build

* Fix upload progress dialog and clean up bad imports

--- a/apps/dashboard/src/app/account/account-kbs/users-dialog/users-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-kbs/users-dialog/users-dialog.component.html
@@ -1,13 +1,8 @@
-<div class="users-dialog">
-  <h2 class="display-s">{{ 'account.stash.users' | translate }}</h2>
-  <pa-button
-    class="close-button"
-    icon="cross"
-    aspect="basic"
-    (click)="close()">
-    {{ 'generic.close' | translate }}
-  </pa-button>
-  <app-users-manage
-    [kb]="data.kb"
-    [modal]="true"></app-users-manage>
-</div>
+<pa-modal-advanced fitContent>
+  <pa-modal-title>{{ 'account.stash.users' | translate }}</pa-modal-title>
+  <pa-modal-content>
+    <app-users-manage
+      [kb]="modal.config.data?.['kb']"
+      [modal]="true"></app-users-manage>
+  </pa-modal-content>
+</pa-modal-advanced>
