[sc-4882] and [sc-4639]: better error state management
- If http error 402, display proper message on search widget
- Refactor search endpoints (search, find, catalog, suggest) and states to use a common `IErrorResponse` interface and return error status and detail

--- a/libs/search-widget/src/components/suggestions/Suggestions.scss
+++ b/libs/search-widget/src/components/suggestions/Suggestions.scss
@@ -1,6 +1,9 @@
 .sw-suggestions {
   --suggestion-side-padding: var(--rhythm-3);
 
+  .error-message {
+    padding: 0 var(--rhythm-2);
+  }
   section {
     padding: var(--rhythm-2) var(--suggestion-side-padding);
   }
