--- a/libs/search-widget/src/components/answer/Answer.scss
+++ b/libs/search-widget/src/components/answer/Answer.scss
@@ -3,8 +3,14 @@
     float: right;
     padding-top: var(--rhythm-0_5);
   }
-  .text {
+  .answer-container {
+    align-items: center;
+    display: flex;
     margin-top: var(--rhythm-1);
+
+    .text {
+      flex: 1 1 auto;
+    }
   }
   .results {
     display: flex;
