--- a/libs/search-widget/src/components/answer/Chat.scss
+++ b/libs/search-widget/src/components/answer/Chat.scss
@@ -1,61 +1,107 @@
 .sw-chat {
-  width: 100vw;
-  height: calc(100vh - 3em);
-  display: flex;
-  flex-direction: column;
-  overflow-y: hidden;
+  --main-padding-side: var(--rhythm-2);
+  --main-padding-top: var(--rhythm-7);
 
-  .entries {
-    overflow-y: scroll;
+  background: var(--color-neutral-lighter);
+  bottom: 0;
+  display: flex;
+  left: 0;
+  justify-content: center;
+  padding: var(--main-padding-top) var(--main-padding-side) 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 1;
+
+  header {
+    position: absolute;
+    right: var(--rhythm-1);
+    top: var(--rhythm-1);
   }
-  .entry:not(:first-child) {
-    border-top: 1px solid var(--color-neutral-lighter);
-  }
-  .row-1 {
-    display: grid;
-    grid-template-columns: var(--rhythm-7) auto;
-  }
-  .row-2 {
-    display: grid;
-    grid-template-columns: var(--rhythm-2) auto;
-  }
-  .answer {
-    grid-column: 2;
-    width: 100%;
-  }
-  .feedback {
-    display: none;
-  }
-  .icon {
+
+  .chat-container {
+    --chat-padding: var(--rhythm-1_5);
+    --height-input: var(--rhythm-6);
+    --max-width-container: calc(100vw - var(--main-padding-side) * 2);
+
+    background: var(--color-light-stronger);
     display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .input {
-    display: grid;
-    grid-template-columns: 0 auto 0;
-    margin: auto 0 0 0;
-    padding-top: var(--rhythm-2);
+    flex: 1 0 auto;
+    flex-direction: column;
+    height: 100%;
+    max-width: var(--max-width-container);
+
+    .entries-container {
+      max-height: calc(100vh - var(--main-padding-top) - var(--height-input));
+      overflow: auto;
+      flex: 1 0 auto;
+
+      .chat-entry {
+        padding: var(--chat-padding);
+
+        &:not(:last-of-type) {
+          border-bottom: 1px solid var(--color-neutral-lighter);
+        }
+
+        .chat-icon {
+          padding-top: var(--rhythm-0_5);
+        }
+        .question {
+          display: flex;
+          gap: var(--rhythm-2);
+        }
+        .answer {
+          max-width: calc(100vw - var(--main-padding-side) * 2 - var(--chat-padding) * 2);
+        }
+      }
+    }
+
+    .input-container {
+      flex: 0 0 auto;
+    }
   }
 }
+
 @media (min-width: 599px) {
   .sw-chat {
-    width: 100%;
-    height: 100vh;
-    .row-1,
-    .row-2 {
-      display: grid;
-      grid-template-columns: var(--rhythm-10) auto var(--rhythm-16);
+    --main-padding-side: var(--rhythm-3);
+
+    .chat-container {
+      --padding-top-input-container: var(--rhythm-2);
+      --padding-bottom-input-container: var(--rhythm-4);
+      --height-input: calc(
+        var(--rhythm-6) + var(--padding-top-input-container) + var(--padding-bottom-input-container)
+      );
+
+      .input-container {
+        padding: var(--padding-top-input-container) var(--rhythm-4) var(--padding-bottom-input-container);
+
+        &.scrolling-behind {
+          border-top: 1px solid var(--color-neutral-lighter);
+        }
+      }
     }
-    .input {
-      grid-template-columns: var(--rhythm-10) auto var(--rhythm-10);
-      margin: auto 0 var(--rhythm-4) 0;
-    }
-    .answer {
-      width: calc(var(--resource-modal-width-md) - var(--rhythm-10) - var(--rhythm-16));
-    }
-    .feedback {
-      display: block;
+  }
+}
+
+@media (min-width: 1023px) {
+  .sw-chat {
+    --main-padding-side: var(--rhythm-12);
+    --main-padding-top: 0;
+
+    .chat-container {
+      --max-width-container: calc(var(--rhythm-64) * 2);
+      --padding-bottom-input-container: var(--rhythm-9);
+
+      .entries-container {
+        .title-m {
+          max-width: calc(var(--max-width-container) - var(--rhythm-12) * 2);
+        }
+      }
+
+      .input-container {
+        padding: var(--padding-top-input-container) var(--rhythm-10) var(--padding-bottom-input-container);
+      }
     }
   }
 }
