--- a/libs/search-widget/src/components/answer/ChatInput.scss
+++ b/libs/search-widget/src/components/answer/ChatInput.scss
@@ -6,14 +6,17 @@
   position: relative;
   border-top: 1px solid var(--color-dark-stronger);
   height: var(--rhythm-6);
+
   &.highlight {
     background-color: var(--color-tertiary-lighter);
   }
 
   .icon {
+    display: flex;
     margin: 0 var(--rhythm-2);
   }
   .microphone {
+    display: flex;
     margin: 0 var(--rhythm-1);
   }
 
