--- a/libs/search-widget/src/components/answer/Answer.scss
+++ b/libs/search-widget/src/components/answer/Answer.scss
@@ -6,6 +6,7 @@
   .answer-container {
     align-items: center;
     display: flex;
+    gap: var(--rhythm-1);
     margin-top: var(--rhythm-1);
 
     .text {
