Fix Chat layout [sc-4853] (#673)
* Fix Chat layout [sc-4853]

* Add missing gap between answer and feedback

* Create isMobileViewport function and use it everywhere

--- a/libs/search-widget/src/components/answer/Answer.scss
+++ b/libs/search-widget/src/components/answer/Answer.scss
@@ -3,8 +3,15 @@
     float: right;
     padding-top: var(--rhythm-0_5);
   }
-  .text {
+  .answer-container {
+    align-items: center;
+    display: flex;
+    gap: var(--rhythm-1);
     margin-top: var(--rhythm-1);
+
+    .text {
+      flex: 1 1 auto;
+    }
   }
   .results {
     display: flex;
