Fix [sc-4871]: unselect after bulk actions
- refactoring to prevent code duplication
- reset selection after bulk actions (delete/reprocess)

--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -106,6 +106,7 @@
         [sorting]="sort"
         [labelSets]="labelSets$ | async"
         [bulkAction]="bulkAction"
+        [(selection)]="selection"
         (addLabels)="addLabelsToSelection($event)"
         (clickOnTitle)="viewResource($event.resource.id)"
         (deleteResources)="delete($event)"
@@ -120,6 +121,7 @@
         [data]="data"
         [sorting]="sort"
         [bulkAction]="bulkAction"
+        [(selection)]="selection"
         (clickOnTitle)="viewResource($event.resource.id)"
         (menuAction)="onMenuAction($event)"
         (deleteResources)="delete($event)"
@@ -131,6 +133,7 @@
         [data]="data"
         [sorting]="sort"
         [bulkAction]="bulkAction"
+        [(selection)]="selection"
         [errorCount]="(statusCount | async)?.error"
         (clickOnTitle)="viewResource($event.resource.id)"
         (isLoading)="setLoading($event)"
