Fix [sc-3337]: add description on account kb list

--- a/apps/dashboard/src/app/account/account-kbs/account-kbs.component.html
+++ b/apps/dashboard/src/app/account/account-kbs/account-kbs.component.html
@@ -8,6 +8,8 @@
   class="account-kbs">
   <h2>{{ 'account.related_kbs' | translate }}</h2>
 
+  <p>{{ 'account.kb-description' | translate }}</p>
+
   <div class="account-kbs-list">
     <div
       class="account-kb"
