--- a/libs/common/src/lib/resources/edit-resource/classification/paragraph-classification/paragraph-classification.component.scss
+++ b/libs/common/src/lib/resources/edit-resource/classification/paragraph-classification/paragraph-classification.component.scss
@@ -50,3 +50,10 @@ $padding-bottom-header: rhythm(3);
   flex-direction: column;
   gap: rhythm(3);
 }
+
+.right-panel-container {
+  .help {
+    display: flex;
+    gap: rhythm(0.5);
+  }
+}
