--- a/apps/desktop/src/app/main-layout/topbar.component.html
+++ b/apps/desktop/src/app/main-layout/topbar.component.html
@@ -12,8 +12,16 @@
       size="small"
       kind="destructive"
       aspect="basic"
-      (click)="resetSyncServer()">
+      (click)="setSyncServer(true)">
       {{ 'generic.server_down' | translate }}
+    </pa-button>
+    <pa-button
+      *ngIf="(isServerDown | async) === false"
+      size="small"
+      kind="secondary"
+      aspect="basic"
+      (click)="setSyncServer(false)">
+      {{ 'generic.server_up' | translate }}
     </pa-button>
   </div>
   <div class="accounts">
