[sc-4459] Add an icon to copy the code on hint component

--- a/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
@@ -28,6 +28,7 @@
 
       <div class="webhook-hint">
         <ncom-hint
+          learnMore="https://docs.nuclia.dev/docs/understanding/intro#use-a-webhook"
           noMaxWidth
           label="Learn more about webhooks">
           <p>
@@ -35,11 +36,6 @@
             <code>POST</code>
             call to this URL, sending the result as payload.
           </p>
-          <a
-            href="https://docs.nuclia.dev/docs/understanding/intro#use-a-webhook"
-            target="_new">
-            Learn more
-          </a>
         </ncom-hint>
       </div>
 
