--- a/libs/common/src/lib/resources/edit-resource/profile/profile.component.html
+++ b/libs/common/src/lib/resources/edit-resource/profile/profile.component.html
@@ -158,18 +158,13 @@
   <div class="right-panel-container">
     <ncom-hint
       label="How to modify a resource with the API"
-      inverted
+      learnMore="https://docs.nuclia.dev/docs/api#operation/Modify_Resource_kb__kbid__resource__rid__patch"
       [values]="hintValues | async">
-      <pre><code class="highlight">curl $$RESOURCE$$ \
- -X PATCH \
- -H "authorization: Bearer $$AUTH_TOKEN$$" \
- --data-raw '$$DATA$$'</code></pre>
-      <a
-        href="https://docs.nuclia.dev/docs/api#operation/Modify_Resource_kb__kbid__resource__rid__patch"
-        target="_new"
-        class="body-m">
-        Learn more
-      </a>
+      <pre><code>curl $$RESOURCE$$ \
+  -X PATCH \
+  -H "authorization: Bearer $$AUTH_TOKEN$$" \
+  --data-raw '$$DATA$$'</code>
+      </pre>
     </ncom-hint>
   </div>
 </div>
