Fix [sc-4958]: upload link and progress status style

--- a/libs/common/src/lib/upload/create-link/create-link.component.html
+++ b/libs/common/src/lib/upload/create-link/create-link.component.html
@@ -69,7 +69,8 @@
     <pa-button
       type="submit"
       kind="primary"
-      [disabled]="(linkForm.value.type === 'csv' ? csv.length === 0 : !linkForm.valid) || pending">
+      [disabled]="(linkForm.value.type === 'csv' ? csv.length === 0 : !linkForm.valid) || pending"
+      (click)="add()">
       {{ 'generic.add' | translate }}
     </pa-button>
   </pa-modal-footer>
