[sc-4133] Add navigateToFile

--- a/apps/dashboard/src/app/widgets/widget-generator.component.html
+++ b/apps/dashboard/src/app/widgets/widget-generator.component.html
@@ -78,6 +78,12 @@
           </pa-toggle>
           <pa-toggle
             labelOnRight
+            help="stash.widgets.navigateToFile.help"
+            formControlName="navigateToFile">
+            {{ 'stash.widgets.navigateToFile' | translate }}
+          </pa-toggle>
+          <pa-toggle
+            labelOnRight
             help="stash.widgets.permalink.help"
             formControlName="permalink">
             {{ 'stash.widgets.permalink' | translate }}
