--- a/libs/search-widget/src/components/answer/Chat.scss
+++ b/libs/search-widget/src/components/answer/Chat.scss
@@ -11,7 +11,7 @@
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 1;
+  z-index: var(--z-index-modal);
 
   header {
     position: absolute;
