--- a/apps/desktop/src/app/upload/select-files/select-files.component.html
+++ b/apps/desktop/src/app/upload/select-files/select-files.component.html
@@ -43,7 +43,7 @@
     <pa-button
       qa="next"
       kind="primary"
-      [disabled]="selection.isEmpty() && !(currentSource | async)?.permanentSync"
+      [disabled]="selection.isEmpty()"
       (click)="next.emit()">
       {{ 'generic.save_continue' | translate }}
     </pa-button>
