--- a/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
+++ b/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
@@ -4,6 +4,17 @@
   </pa-modal-title>
   <pa-modal-content>
     <form>
+      <div>
+        <div class="title-s">{{ 'billing.tier_select.title' | translate }}</div>
+        <div>{{ 'billing.tier_select.help' | translate }}</div>
+        <pa-radio-group
+          name="radio-tier"
+          [value]="tier"
+          (valueChange)="changeTier($event)">
+          <pa-radio value="stash-developer">Starter/developer</pa-radio>
+          <pa-radio value="stash-business">Business</pa-radio>
+        </pa-radio-group>
+      </div>
       <div class="section">
         <div>
           <div class="title-s">{{ 'billing.ingestion_cost' | translate }}</div>
@@ -15,8 +26,8 @@
           class="field-block"
           *ngFor="let param of params">
           <pa-slider
-            [min]="0"
-            [max]="prices.usage[param].threshold ? prices.usage[param].threshold * 200 : 300"
+            [min]="prices[tier].usage[param].threshold || 0"
+            [max]="prices[tier].usage[param].threshold ? prices[tier].usage[param].threshold * 50 : 300"
             [value]="values[param]"
             (valueChange)="update(param, $event)">
             <span class="title-xxs">{{ 'billing.parameter.' + param | translate }}</span>
