--- a/libs/common/src/lib/resources/resource-list/resources-table.component.scss
+++ b/libs/common/src/lib/resources/resource-list/resources-table.component.scss
@@ -20,6 +20,7 @@
   .table-options {
     align-items: center;
     display: flex;
+    gap: rhythm(1);
     justify-content: flex-end;
     margin-left: auto;
   }
