Add review modal

--- a/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
+++ b/apps/dashboard/src/app/account/billing/subscriptions/subscriptions.component.html
@@ -43,7 +43,7 @@
           <span class="unit">/{{ 'billing.month' | translate }}</span>
         </div>
         <pa-button
-          *ngIf="(accountType | async) === 'stash-basic'"
+          *ngIf="(accountType | async) === 'stash-basic' || (accountType | async) === 'stash-trial'"
           kind="primary"
           routerLink="../checkout"
           [queryParams]="{ type: 'stash-developer' }">
@@ -57,7 +57,11 @@
           <span class="unit">/{{ 'billing.month' | translate }}</span>
         </div>
         <pa-button
-          *ngIf="(accountType | async) === 'stash-basic' || (accountType | async) === 'stash-developer'"
+          *ngIf="
+            (accountType | async) === 'stash-basic' ||
+            (accountType | async) === 'stash-trial' ||
+            (accountType | async) === 'stash-developer'
+          "
           kind="primary"
           routerLink="../checkout"
           [queryParams]="{ type: 'stash-business' }">
