Improve csv-select component so we can reuse it for entities
  - update style (spacing) and element positioning (CSV format details after the button)
  - adapt upload dialog components using it accordingly
  - add `confirmData` input in csv-select: when present, we open a confirmation dialog before uploading (needed for entity management dialog)
  - add `buttonKind` input allowing to change the kind of select csv button

--- a/libs/common/src/lib/upload/create-link/create-link.component.scss
+++ b/libs/common/src/lib/upload/create-link/create-link.component.scss
@@ -5,6 +5,11 @@
   display: flex;
   flex-direction: column;
   gap: rhythm(2);
+
+  .csv-container app-csv-select {
+    display: block;
+    margin-bottom: rhythm(4);
+  }
 }
 
 .dialog-title-with-button {
