--- a/libs/common/src/lib/upload/upload-text/upload-text.component.scss
+++ b/libs/common/src/lib/upload/upload-text/upload-text.component.scss
@@ -10,6 +10,11 @@ app-label-field {
   margin-bottom: rhythm(4);
 }
 
+app-csv-select {
+  display: block;
+  margin-bottom: rhythm(4);
+}
+
 .uploads {
   max-height: rhythm(14);
   overflow-y: auto;
