--- a/libs/common/src/lib/upload/create-link/create-link.component.html
+++ b/libs/common/src/lib/upload/create-link/create-link.component.html
@@ -16,6 +16,11 @@
       [formGroup]="linkForm"
       (ngSubmit)="add()">
       <div class="link-form">
+        <pa-radio-group formControlName="type">
+          <pa-radio value="one">{{ 'generic.link' | translate }}</pa-radio>
+          <pa-radio value="multiple">{{ 'modal.create_link.multiple' | translate }}</pa-radio>
+          <pa-radio value="csv">{{ 'modal.create_link.csv_file' | translate }}</pa-radio>
+        </pa-radio-group>
         <pa-input
           *ngIf="linkForm.value.type === 'one'"
           formControlName="link"
@@ -29,7 +34,9 @@
           [errorMessages]="validationMessages['link']">
           {{ 'modal.create_link.textarea' | translate }}
         </pa-textarea>
-        <div *ngIf="linkForm.value.type === 'csv'">
+        <div
+          *ngIf="linkForm.value.type === 'csv'"
+          class="csv-container">
           <app-csv-select
             [help]="['upload.csv_links_description', 'upload.csv_labels']"
             [fields]="2"
@@ -44,11 +51,6 @@
             </div>
           </div>
         </div>
-        <pa-radio-group formControlName="type">
-          <pa-radio value="one">{{ 'generic.link' | translate }}</pa-radio>
-          <pa-radio value="multiple">{{ 'modal.create_link.multiple' | translate }}</pa-radio>
-          <pa-radio value="csv">{{ 'modal.create_link.csv_file' | translate }}</pa-radio>
-        </pa-radio-group>
         <app-label-field
           *ngIf="linkForm.value.type !== 'csv'"
           [(selection)]="selectedLabels"></app-label-field>
