--- a/apps/dashboard/src/app/account/billing/review/review.component.scss
+++ b/apps/dashboard/src/app/account/billing/review/review.component.scss
@@ -1,3 +1,11 @@
+@import 'variables';
+
+pa-modal-content {
+  display: flex;
+  flex-direction: column;
+  gap: rhythm(3);
+}
+
 h2 {
   margin: 0;
 }
