--- a/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
+++ b/apps/dashboard/src/app/account/billing/calculator/calculator.component.html
@@ -27,7 +27,7 @@
           *ngFor="let param of params">
           <pa-slider
             [min]="prices[tier].usage[param].threshold || 0"
-            [max]="prices[tier].usage[param].threshold ? prices[tier].usage[param].threshold * 50 : 300"
+            [max]="2000 / prices[tier].usage[param].price + prices[tier].usage[param].threshold"
             [value]="values[param]"
             (valueChange)="update(param, $event)">
             <span class="title-xxs">{{ 'billing.parameter.' + param | translate }}</span>
